    [rGb6ba7054a0]

  * gpg: Add modes 16 and 30 to --gen-random.

  * gpg: Emit status line and proper diagnostics for write errors.
    [T6528]

  * gpg: Make progress work for large files on Windows.  [T6534]

  * gpg: New option --no-compress as alias for -z0.

  * gpg: Detect already compressed data also when using a pipe.  Also
    detect JPEG and PNG file formats.  [T6332]

  * gpgsm: Support ECC certificates.  [T6253]

  * gpgsm: Print PROGRESS status lines.  Add new --input-size-hint.
    [T6534]

  * gpgsm: Also announce AES256-CBC in signatures.  [rGaa397fdcdb21]

  * gpgsm: Major rewrite of the PKCS#12 parser.  [T6536]

  * gpgsm: Non-armored detached signature are now created without
    using indefinite form length octets.  This improves compatibility
    with some PDF signature verification software.  [rG3d3b941ce9]

  * gpgsm: Verification of detached signatures does now strip trailing
    zeroes from the input if --assume-binary is used.  [rG6bdf11f671]

  * dirmngr: New option --ignore-crl-extensions.  [T6545]

  * dirmngr: Backport of the AD_QUERY command.  [rG2a3bad5985]

  * dirmngr: Support config value "none" to disable the default
    keyserver.  [T6708]

  * wkd: Use export-clean for gpg-wks-client's --mirror and --create
    commands.  [rG505e770b4c]

  * wkd: Make --add-revocs the default in gpg-wks-client.  New option
    --no-add-revocs.  [rG67d57fae3f]

  * Ignore attempts to remove the /dev/null device.  [T6556]

  Release-info: https://dev.gnupg.org/T6307


Noteworthy changes in version 2.2.41 (2022-12-09)
-------------------------------------------------

  * gpg: Add a notation to encryption subkeys in de-vs mode.  [T6279]

  * gpg: Fix trusted introducer for mbox only user-ids.  [T6238]

  * gpg: Report an error via status-fd for receiving a key from the
    agent.  [T5151]

  * gpg: Make --require-compliance work without the --status-fd
    option.  [r11f3232716]
